# Meta-Hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  command_execution_report.txt  env.py  grader.py  inference.py  models.py  openenv.yaml  parser.py  pyproject.toml  run_tests.py  test_api.py  test_docker_runtime.py  test_env.py  test_inference.py  test_parser.py  test_tasks.py  testcaserunner.py
.opencode/: server.lock.json
docs/: report.md
server/: app.py
tasks/: easy.yaml  hard.yaml  medium.yaml
